--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
         include /etc/nginx/default.d/*.conf;
 
         location / {
-        proxy_pass http://internal-iwayQAppLB-1765429272.us-east-1.elb.amazonaws.com:8080/iwayq/;
+        proxy_pass http://internal-iwayQAppLB-1765429272.us-east-1.elb.amazonaws.com:8080/iwayq/; (edit at this lever just the ALB)
         }
 
         error_page 404 /404.html;
